--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
+    "format": "npx prettier --write .",
     "generate": "nuxt generate",
     "lint:prettier": "prettier --check .",
     "lint": "npm run lint:prettier",
@@ -22,7 +23,7 @@
   },
   "devDependencies": {
     "eslint-config-prettier": "^8.3.0",
-    "prettier": "^2.5.1",
+    "prettier": "^2.7.1",
     "sass": "^1.53.0",
     "sass-loader": "^10.3.0"
   }
