--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "webpack": "^4.46.0"
   },
   "devDependencies": {
+    "@nuxtjs/style-resources": "^1.2.1",
     "eslint-config-prettier": "^8.3.0",
     "prettier": "^2.7.1",
     "sass": "^1.53.0",
